update the kitty for my arch

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,19 +1,32 @@
 # Kitty configuration file
-# Generated with good defaults for a modern, attractive terminal
+# WAAAHHHH NOOOOooooooOOOOOOO, my kitty config is gone! :(
+# Recreated on 13 October 2025
+# Don't ask why I have a kitty config, I just do.
 
 # Font settings
-font_family JetBrains Mono
+font_family "JetBrains Mono"
 bold_font auto
 italic_font auto
 bold_italic_font auto
-font_size 12
+font_size 14.0
 
 # Window settings
-initial_window_width 1200
-initial_window_height 800
 window_padding_width 10
 background_opacity 0.95
 dynamic_background_opacity yes
+background_image /usr/share/wallpapers/backgrounds/rainy.jpeg
+background_image_layout scaled
+background_tint         0.97
+background_tint_gaps    -0.02
+window_border          yes
+window_border_width     0.1pt
+active_border_color     #44ffff
+window_logo_path /home/idleshade/.local/share/icons/Arc-ICONS/places/24@2x/distributor-logo-archlinux.png
+window_logo_position bottom-right
+window_logo_alpha 0.4
+single_window_margin_width 0
+enabled_layouts Tall, *
+macos_option_as_alt yes
 
 # Tab bar settings
 tab_bar_style powerline
@@ -54,10 +67,11 @@ color7 #bbbbbb
 color15 #ffffff
 
 # Scrollback
-scrollback_lines 10000
+scrollback_lines 5000
+scrollback_pager_history_size 10
 
 # Mouse settings
-mouse_hide_wait 3.0
+mouse_hide_wait 5.0
 url_color #0087bd
 url_style curly
 
@@ -74,6 +88,10 @@ visual_bell_duration 0.1
 allow_remote_control yes
 listen_on unix:/tmp/kitty
 close_on_child_death no
+notify_on_cmd_finish invisible
+cursor_trail 200
+cursor_trail_decay 0.1 0.4
+cursor_trail_start_threshold 2
 
 # Additional configurations
 enabled_layouts tall,grid,horizontal,splits,stack,fat,vertical
@@ -91,6 +109,18 @@ map ctrl+up neighboring_window up
 map ctrl+down neighboring_window down
 map ctrl+p nth_window -1
 map ctrl+shift+d detach_window new-tab
+# Refresh config without restarting kitty
+map ctrl+shift+r load_config_file
+
+# Window sizing
+remember_window_size yes
+initial_window_height 400
+initial_window_width 800
+hide_window_decorations yes
+tab_bar_edge bottom
+tab_bar_style powerline
+tab_powerline_style round
+
 
 # Environment variables
 env EDITOR=code
