--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -14,13 +14,13 @@ font_size 14.0
 window_padding_width 10
 background_opacity 0.95
 dynamic_background_opacity yes
-background_image /usr/share/wallpapers/backgrounds/rainy.jpeg
+background_image /usr/share/wallpapers/Autumn/contents/images/2560x1600.jpg
 background_image_layout scaled
 background_tint         0.97
-background_tint_gaps    -0.02
-window_border          yes
-window_border_width     0.1pt
-active_border_color     #44ffff
+# background_tint_gaps    -0.02
+# window_border          yes
+# window_border_width     0.1pt
+# active_border_color     #44ffff
 window_logo_path /home/idleshade/.local/share/icons/Arc-ICONS/places/24@2x/distributor-logo-archlinux.png
 window_logo_position bottom-right
 window_logo_alpha 0.4
@@ -114,12 +114,9 @@ map ctrl+shift+r load_config_file
 
 # Window sizing
 remember_window_size yes
-initial_window_height 400
-initial_window_width 800
-hide_window_decorations yes
-tab_bar_edge bottom
-tab_bar_style powerline
-tab_powerline_style round
+initial_window_height 700
+initial_window_width 1200
+hide_window_decorations no
 
 
 # Environment variables
