--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,6 +2,7 @@
 # WAAAHHHH NOOOOooooooOOOOOOO, my kitty config is gone! :(
 # Recreated on 13 October 2025
 # Don't ask why I have a kitty config, I just do.
+# kitty config - ver Hola 0.5 
 
 # Font settings
 font_family "JetBrains Mono"
@@ -16,7 +17,7 @@ background_opacity 0.95
 dynamic_background_opacity yes
 background_image /usr/share/wallpapers/Autumn/contents/images/2560x1600.jpg
 background_image_layout scaled
-background_tint         0.97
+background_tint         0.93
 # background_tint_gaps    -0.02
 # window_border          yes
 # window_border_width     0.1pt
@@ -69,11 +70,16 @@ color15 #ffffff
 # Scrollback
 scrollback_lines 5000
 scrollback_pager_history_size 10
+# Clear scrollback on reset
+scrollback_fill_enlarged_window yes
 
 # Mouse settings
 mouse_hide_wait 5.0
 url_color #0087bd
 url_style curly
+
+# Command hints color
+command_hints_foreground #5465f7ff
 
 # Performance
 repaint_delay 10
